--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <!---------- Logo ---------->
             <div class="header-left">
-                <a href="home.html"><img src="/image/icon/jampcs_white.png" alt="Home"></a>
+                <a href="home.html"><img src="jampcs_white.png" alt="Home"></a>
             </div>
 
             <div class="header-mid">
@@ -66,11 +66,11 @@
 
             <!---------- Icons ---------->
             <div class="header-right">
-                <a href="support.html"><img src="/image/icon/icon_question.png" alt="support"></a>
-                <a href="cart.html"><img src="/image/icon/icon_cart.png" alt="cart"></a>
+                <a href="support.html"><img src="icon_question.png" alt="support"></a>
+                <a href="cart.html"><img src="icon_cart.png" alt="cart"></a>
 
                 <div class="icon-container" onmouseover="showLoginHover()" onmouseout="hideLoginHover()">
-                    <img src="/image/icon/icon_login.png" alt="login">
+                    <img src="icon_login.png" alt="login">
 
                     <div id ="login-hover-wrap" style="display: none;">
                         <div id="logout-hover">
